3-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kitty
  annotations:
    external-dns.alpha.kubernetes.io/hostname: <your-fullname>.sbg.emundo.eu
spec:
  tls:
    - hosts:
      - <your-fullname>.sbg.emundo.eu
  rules:
    - host: <your-fullname>.sbg.emundo.eu
      http:
        paths:
        - path: /
          backend:
            serviceName: kitty
            servicePort: 80
